--- a/index.html
+++ b/index.html
@@ -5711,6 +5711,9 @@
                     <p class="text-base text-muted">
                         智能解析 · 精确计算 · 标准报告 · 炫酷体验
                     </p>
+                    <p class="text-base" style="margin-top: var(--spacing-md); color: var(--text-secondary);">
+                        联系微信号:stood__up（是2个_不是1个），<span style="color: #D32F2F; font-size: var(--font-size-xl); font-weight: 700;">免费！！！</span>一起改进此项目，并且添加您的加油站。或者其他需要统计总结的项目。
+                    </p>
                 </div>
             </div>
 
@@ -5815,6 +5818,11 @@
                     <h2 class="text-xl text-primary">
                         <span x-text="steps[currentStep - 1]?.title || '步骤内容'"></span>
                     </h2>
+                    
+                    <div class="text-base" style="margin-top: var(--spacing-md); margin-bottom: var(--spacing-md); padding: var(--spacing-md); background-color: var(--background-secondary); border-radius: var(--border-radius); color: var(--text-secondary);">
+                        联系微信号:stood__up（是2个_不是1个），<span style="color: #D32F2F; font-size: var(--font-size-xl); font-weight: 700;">免费！！！</span>一起改进此项目，并且添加您的加油站。或者其他需要统计总结的项目。
+                    </div>
+                    
                     <div class="text-sm text-muted">
                         步骤 <span x-text="currentStep"></span> / 7
                     </div>
